# agentic-empathy-ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  openfilecommand.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
backend/: audit_pipeline.py  main.py  voice_companion.py
backend/agent/: __init__.py  dialogue.py  emptychair_agent.py  emptychair_safety.py  inference.py  knowledge.py  memory.py  perception.py  prompts.py  router.py  safety.py  voice_io.py
backend/api/: chat.py  profile.py  voice_monitor.py
backend/core/: dependencies.py  engine.py
backend/data/: benchmark_data.json  conversation_data.json  emotion_keywords.json
backend/data/benchmark3/: b3_cases.json
backend/data/empatheticdialogues/: knowledge.py
backend/evaluate/: benchmark_final_result.csv  evaluate.py
backend/evaluate/benchmark/: b1_500_utils.py  b2_200_utils.py  b3_utils.py  epitome_scorer.py  finalize_b1_500.py  finalize_b2_200.py  finalize_b3.py  finalize_full.py  generated_responses.csv  generated_responses_run1.csv  generated_responses_run3.csv  generated_responses_v5b.csv  reset_b1_500.py  results_run1.csv  results_run2.csv  results_run3.csv  results_v4.csv  results_v5.csv  results_v5b.csv  router_analysis.csv  router_analysis_run3.csv  router_decisions.csv  router_decisions_v5b.csv  (+14 more)
backend/scripts/: build_rag_combined.py  build_rag_from_esconv.py
docs/: METHOD_SNAPSHOT_FOR_PAPER.md
esp32/soulmate_speaker/: soulmate_speaker.ino
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: OceanChart.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/context/: UserContext.tsx
frontend/hooks/: useChat.ts  useVoiceMonitor.ts
(+58 files in other folders)
